--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ packages/hardhat/cache*
 packages/**/data
 !packages/react-app/src/contracts/contracts.js
 
-packages/react-app/src/RBDknevaThx7OS6TSULo00kYTADbA0gL12PamuBuLM4.js
-packages/react-app/src/utils/RBDknevaThx7OS6TSULo00kYTADbA0gL12PamuBuLM4.js
+packages/react-app/LBZe99qrl3_vOB4jwXqM-ps66cJE7fuksHJO3-B8gno.json
+packages/react-app/src/utils/LBZe99qrl3_vOB4jwXqM-ps66cJE7fuksHJO3-B8gno.json
 
 # ts
 packages/hardhat-ts/cache
