--- a/packages/react-app/.sample.env
+++ b/packages/react-app/.sample.env
@@ -1,4 +1,5 @@
 # REACT_APP_PROVIDER=https://rinkeby.infura.io/v3/2717afb6bf164045b5d5468031b93f87
+PUBLIC_URL="htpp://localhost:3000"
 
 ARWEAVE_d=""
 ARWEAVE_dp=""
