--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "ci"
-  ci:
+  tests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -23,8 +23,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: Start hardhat chain
+      - name: Install
+        run: yarn install
+
+      - name: Start local testnet
         run: yarn chain
 
-      - name: Run tests
+      - name: Test
         run: yarn test
