Start local testnet in background (to not block tests)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: yarn install
 
       - name: Start local testnet
-        run: yarn chain
+        run: yarn chain &
 
       - name: Test
         run: yarn test
