--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
       continue-on-error: true
       id: slither
       with:
+        target: 'packages/hardhat/'
         node-version: 16
         sarif: results.sarif
 
