Try copying yarn.lock to packages/hardhat so slither can find it
  - Trying to fix error:
    [-] Did not detect a package-lock.json or yarn.lock in packages/hardhat/, consider locking your dependencies!

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Copy yarn.lock to 'packages/hardhat/'
+      run: cp yarn.lock packages/hardhat
+
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
