Try running slither action with sudo.
  - Reference: https://stackoverflow.com/a/71044792/3357664

  - Trying to fix error (same error as previous 4 commits):
    INFO:CryticCompile:'npx hardhat compile --force' running
    Error: EACCES: permission denied, mkdir '/github/home/.cache/hardhat-nodejs'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Copy yarn.lock to 'packages/hardhat/'
       run: cp yarn.lock packages/hardhat
 
+    - name: Enable root priviledge
+      run: sudo -i
+
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
@@ -48,6 +51,9 @@ jobs:
         target: 'packages/hardhat/'
         node-version: 16
         sarif: results.sarif
+
+    - name: Disable root priviledge
+      run: exit
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
