--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Copy yarn.lock to 'packages/hardhat/'
       run: cp yarn.lock packages/hardhat
 
+    - name: Who am I?
+      run: whoami
+
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
