Add ls -la /github/home/.cache/hardhat-nodejs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
     - name: Who am I?
       run: whoami
 
+    - name: ls -la /github/home/.cache/hardhat-nodejs
+      run: ls -la /github/home/.cache/hardhat-nodejs
+
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
