Remove trailing /.cache because it doesn't exist yet.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
     - name: Who am I?
       run: whoami
 
-    - name: ls -la /github/home/.cache
-      run: ls -la /github/home/.cache
+    - name: ls -la /github/home
+      run: ls -la /github/home
 
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
