--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Copy yarn.lock to 'packages/hardhat/'
       run: cp yarn.lock packages/hardhat
 
+    - name: ls -la /
+      run: ls -la /
+
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
