--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,12 +40,12 @@ jobs:
     - name: Copy yarn.lock to 'packages/hardhat/'
       run: cp yarn.lock packages/hardhat
 
-    - run: sudo chown root:root .
-
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
       id: slither
+      env:
+        USERID: 1000
       with:
         target: 'packages/hardhat/'
         node-version: 16
