--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,8 @@ jobs:
     - name: Copy yarn.lock to 'packages/hardhat/'
       run: cp yarn.lock packages/hardhat
 
+    - run: sudo mkdir /github/home/.cache/hardhat-nodejs
+
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
