--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
       continue-on-error: true
       id: slither
       with:
+        target: 'packages/hardhat/'
         ignore-compile: true
         sarif: results.sarif
 
