--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -67,6 +67,7 @@
     "styled-components": "^5.3.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tw-elements": "^1.0.0-alpha10",
+    "wagmi": "^0.6.3",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.1"
   },
