--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -68,7 +68,8 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tw-elements": "^1.0.0-alpha10",
     "walletlink": "^2.1.5",
-    "web3modal": "^1.9.1"
+    "web3modal": "^1.9.1",
+    "recharts": "^2.1.13"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.21",
