--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -20,6 +20,7 @@
     "@craco/craco": "^6.4.3",
     "@heroicons/react": "^1.0.5",
     "@portis/web3": "^4.0.5",
+    "@rainbow-me/rainbowkit": "^0.5.0",
     "@ramp-network/ramp-instant-sdk": "^2.2.0",
     "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.11.4",
